add unit tests and update the doc